driver/tests/snap/type_error/match_arm_type_mismatch/0_input.splic
def bad(x: u32, y: u64) -> u32 = {
    match x {
        0 => x,
        n => y,
    }
};
